# CacheHound

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/include/cachehound/cli/commands/: .gitignore  affine_test_command.hpp  cycle_test_command.hpp  reverse_command.hpp  reverse_info_command.hpp  reverse_placement_command.hpp  reverse_replacement_command.hpp  root_command.hpp
cli/include/cachehound/cli/placement/: affine_placement_reverser.hpp  affine_solver.hpp  affinely_independent.hpp  bit.hpp  determinant.hpp  (+2 more)
cli/src/: main.cpp
lib/: CMakeLists.txt
lib/include/cachehound/: cachehound.hpp
lib/include/cachehound/adapters/: armv8_bypass_adapter.hpp  bypass_adapter.hpp  physical_adapter.hpp
lib/include/cachehound/algo/: find_eviction_set.hpp  is_eviction_set.hpp  locate_eviction_set.hpp  measure_sequence.hpp  minimize_eviction_set.hpp  reduce_eviction_set.hpp  simulate_sequence.hpp
lib/include/cachehound/backends/: kernel_memory.hpp
lib/include/cachehound/concepts/: address_distribution.hpp  address_range.hpp  armv8_memory.hpp  eviction_strategy.hpp  extended_memory_region.hpp  extended_memory_region_range.hpp  flushable_memory.hpp  instrumented_memory.hpp  memory.hpp  memory_region.hpp  memory_region_range.hpp  physically_indexable_memory.hpp  placement_policy.hpp  replacement_policy.hpp  resettable_memory.hpp  sequence.hpp  stats_memory.hpp  switch_channel_memory.hpp  timed_memory.hpp  x86_memory.hpp
lib/include/cachehound/impl/: src.hpp
lib/include/cachehound/strategies/: cisw_eviction_strategy.hpp  eviction_set_strategy.hpp
lib/include/cachehound/util/: address_checker.hpp  any_placement_policy.hpp  any_replacement_policy.hpp  basic_extended_memory_region.hpp  basic_memory_region.hpp  blacklisted_address_distribution.hpp  concatenated_address_distribution.hpp  locate_set.hpp  memory_size.hpp  replacement_policy.hpp  sequence.hpp  set_cycling_address_distribution.hpp  uniform_address_distribution.hpp  warmup.hpp
lib/src/: cachehound.cpp
lib/test/data/: replacement.json
lib/test/src/: replacement.cpp
(+59 files in other folders)
